--- a/README
+++ b/README
@@ -1,1 +1,68 @@
 
+# Гараев Денис
+
+Всем привет, здесь я описываю свои проекты в которых когда либо участвовал.  На данный момент мне 22 года. Начал изучать программирование в возрасте 16-17 лет. С 18 лет работал на фрилансе, писал сайтики, бэкэнд и приложения на андроид. С 20 лет начал работать iOS разработчиком в компании Уфанет, а так же попутно писал некоторые приложения.
+
+## Основные приложения
+
+- Умный Дом
+
+    Приложение переписывалось с нуля с начала 2021 года до июля 2021 года. Архитектуру приложения проектировал и разрабатывал сам. В основе лежит многомодульная система, где главное приложение только передает контейнер в модули для его отображения. Всего на данный момент 16 модулей. 
+
+    В приложение использовались следующие технологии:
+
+    - MVVM + Rx + Clean Architecture + Coordinators + DiContainer
+    - CallKit
+    - AVKit
+    - Для верстки SnapKit
+    - Realm
+    - Intents
+    - ну и по мелочи всякое
+
+    [‎Мой умный дом.](https://apps.apple.com/us/app/%D0%BC%D0%BE%D0%B9-%D1%83%D0%BC%D0%BD%D1%8B%D0%B9-%D0%B4%D0%BE%D0%BC/id1284483769)
+
+- Личный Кабинет
+
+    Самое старое приложение компании, не переписывалось. Написан на CleanSwift. Ничего интересного не было внутри.
+
+    [https://apps.apple.com/us/app/уфанет/id1414791710](https://apps.apple.com/us/app/%D1%83%D1%84%D0%B0%D0%BD%D0%B5%D1%82/id1414791710)
+
+- Внутреннее приложение для сотрудников
+
+    Тут ничего не могу предоставить, так как используется для внутренного использования 🤤 Придется поверить на слово... 
+
+    По технологиям использовали модули из Умного Дома, типо UIComponents, Networking, Utils 
+
+- 
+
+## Фриланс
+
+- Самое первое приложение в AppStore 😖
+
+    ![Снимок экрана 2021-08-18 в 13.41.56.png](%D0%93%D0%B0%D1%80%D0%B0%D0%B5%D0%B2%20%D0%94%D0%B5%D0%BD%D0%B8%D1%81%20173b765b07de4a759577810a0f989589/__2021-08-18__13.41.56.png)
+
+- Приложения для одной компании
+
+    Разрабатывал четыре приложения для их стартапа, но в итоге не взлетело из-за неизвестных факторов
+
+    ![Снимок экрана 2021-08-18 в 13.43.44.png](%D0%93%D0%B0%D1%80%D0%B0%D0%B5%D0%B2%20%D0%94%D0%B5%D0%BD%D0%B8%D1%81%20173b765b07de4a759577810a0f989589/__2021-08-18__13.43.44.png)
+
+- Приложение для своего университета (УГАТУ)
+
+    Расписание УГАТУ
+
+    Достаточно быстро написанное приложение расписания учебного плана для студентов, сотрудников и имеющее постоянное количество пользователей. Не смогли дальше развиваться, так как не могут вложить деньги в развитие продукта. После разработки не возвращался к продукту.
+
+    [https://apps.apple.com/us/app/расписание-угату/id1498430845](https://apps.apple.com/us/app/%D1%80%D0%B0%D1%81%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D0%B5-%D1%83%D0%B3%D0%B0%D1%82%D1%83/id1498430845)
+
+- 
+
+## Достижения
+
+Прошел в финал международного конкурса 
+
+[Поздравляем!](https://ugatu.su/news/get/pozdravlyaem-finalisty-konkursa/)
+
+Занимал победные места в трех хакатонах, но нашел новость только с последнего 
+
+[Студенты УГАТУ завоевали бронзу Рыбинского хакатона](https://ugatu.su/news/get/studenty-ugatu-zavoevali-bronzu-rybinskogo-hakaton/)
