--- a/README
+++ b/README
@@ -39,13 +39,13 @@
 
 - Самое первое приложение в AppStore 😖
 
-    ![Снимок экрана 2021-08-18 в 13.41.56.png](%D0%93%D0%B0%D1%80%D0%B0%D0%B5%D0%B2%20%D0%94%D0%B5%D0%BD%D0%B8%D1%81%20173b765b07de4a759577810a0f989589/__2021-08-18__13.41.56.png)
+    ![__2021-08-18__13.41.56.png](%D0%93%D0%B0%D1%80%D0%B0%D0%B5%D0%B2%20%D0%94%D0%B5%D0%BD%D0%B8%D1%81%20173b765b07de4a759577810a0f989589/__2021-08-18__13.41.56.png)
 
 - Приложения для одной компании
 
     Разрабатывал четыре приложения для их стартапа, но в итоге не взлетело из-за неизвестных факторов
 
-    ![Снимок экрана 2021-08-18 в 13.43.44.png](%D0%93%D0%B0%D1%80%D0%B0%D0%B5%D0%B2%20%D0%94%D0%B5%D0%BD%D0%B8%D1%81%20173b765b07de4a759577810a0f989589/__2021-08-18__13.43.44.png)
+    ![__2021-08-18__13.43.44.png](%D0%93%D0%B0%D1%80%D0%B0%D0%B5%D0%B2%20%D0%94%D0%B5%D0%BD%D0%B8%D1%81%20173b765b07de4a759577810a0f989589/__2021-08-18__13.43.44.png)
 
 - Приложение для своего университета (УГАТУ)
 
